added stripe payment services, cleend up code (state:production ready)